--- a/ext/meson.build
+++ b/ext/meson.build
@@ -40,6 +40,7 @@ subdir('openni2')
 subdir('opus')
 subdir('resindvd')
 subdir('rsvg')
+subdir('rtmp2')
 subdir('rtmp')
 subdir('sbc')
 subdir('sctp')
