--- a/gst/meson.build
+++ b/gst/meson.build
@@ -5,7 +5,7 @@ foreach plugin : ['accurip', 'adpcmdec', 'adpcmenc', 'aiff', 'asfmux',
                   'dvbsuboverlay', 'dvdspu', 'faceoverlay', 'festival',
                   'fieldanalysis', 'freeverb', 'frei0r', 'gaudieffects', 'gdp',
                   'geometrictransform', 'id3tag', 'inter', 'interlace',
-                  'ivfparse', 'ivtc', 'jp2kdecimator', 'rtmp2', 'jpegformat', 'librfb',
+                  'ivfparse', 'ivtc', 'jp2kdecimator', 'jpegformat', 'librfb',
                   'midi', 'mpegdemux', 'mpegpsmux', 'mpegtsdemux', 'mpegtsmux',
                   'mxf', 'netsim', 'onvif', 'pcapparse', 'pnm', 'proxy',
                   'rawparse', 'removesilence', 'sdp', 'segmentclip', 'siren',
